--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
 	<head>
-	<header>Binding</header>
+	<header>War on Deco</header>
 	<!--Below is a meta element that tells the browser to render it at its actual size-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Below is a reset, it clears off browser's default style -->
@@ -16,10 +16,20 @@
 	</head>
 	<body>
 		<header>
-			<h1>DESIGN CRIME </h1>
-			<h2>And Other Diatribes<br><span id="author">Chapter Two<br>Hal Foster, 2002</span></h2>
+			<h1><span id="war">War</span><span id="on">On</span><span id="deco">Deco</span></h1>
+			<h2 class="author">Bulgan Bee, 2024></h2>
 		</header> 
-	<!-- Below is the reading from Crime and Design -->
+		<div class="flex-container">
+			<div class="links">
+			<a href="#designandcrime"><button>Design & Crime</button></a>
+			<a href="#snoopy"><button>Snoopy</button></a>
+			<a href="#quality"><button>Quality</button></a>
+			<a href="#sample"><button>Sample</button></a>
+			<a href="#lovin"><button>Lovin</button></a>
+			</div>
+			<a href="#start" id="arrow">&#8593;</a>
+	</div>
+	<!-- Below is my introduction to the theme of the articles -->
 			<section>
 				<p>The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or <span id="redtext">Art Nouveau</span> has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line — as if to inhabit the thing in this crafted way was to resist the advance of industrial reification somehow.</p> 
 				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer <em>nouveau</em>, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was its strong echo in the present — intuition that we live in another era of blurred disciplines, of objects treated as mini-subjects, of total design, of a <em>Style 2000</em>.</span> </p>  
@@ -36,20 +46,6 @@
 				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. The others, the positive ones [i.e., those who fail to make this distinction], are divided into those who use the urn as a chamber pot and those who use the chamber pot as an urn.</p> 
 				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object (the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, <em>Fountain</em>, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things: they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture. </p>
 				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p>
-			</section>
-	<!-- Below is my take on the reading -->
-			<div>
-				<h2 id="h2_myresponse">READING<br><span id="response">RESPONSE</span></h2>
-			</div>
-		    <section id="response-section">
-				<p>The book <em>Design and Crime and Other Diatribes</em> raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to <span id="redtext">“complete”</span> their lives.</p>
-				<p>The author challenges the reader to critically examine Art Nouveau's approach to design and understand why it is problematic. The reading changed my views about the art movement; before, I enjoyed Art Nouveau-style objects and decorations without thinking much about their functionality. However, I am now questioning how much is enough when using design as decorations and whether purely aesthetic designs can ever improve our society.</p>
-				<p>From the reading, I learned to <span id="redtext">be critical as a designer when creating work</span>. Hal Foster inspired me to raise questions about modern-day design trends. For example, as an interface designer, I often use top industry brands like Apple to get my design inspiration. By following trends, am I mindlessly spreading specific brand messages through my works? Am I doing anything impactful for society or just adding to consumerism? Am I just creating aesthetically pleasing work, or is there an innovation behind it?</p>
-				<p>I firmly believe that Art Nouveau's concept of <em>Gesamtkunstwerk</em>, or "complete work," is a bad idea for contemporary design practices, especially in interaction design. Creating easy-to-navigate digital products that humans can naturally understand is challenging. When working with data, organizing them in a way that does not overwhelm the user has always been vital. Simplicity is not a "cool" trend in digital design; it is a requirement to make users understand what they see on a screen. Putting functionality and simplicity aside and using decorative elements, like a frame, in an interface would distract the users from the product's primary functions and overwhelm them.</p>
-				<p>In conclusion, as a designer, I strongly agree with Hal Foster's message to challenge ourselves and create works for a better future rather than add to decorations. </p>
-				<footer id="myname">By Bulgan (Bee) Altangerel</footer>
-				<footer>Thank you for reading. Here is the link to <a href="https://readings.design/PDF/design-and-crime.pdf"><span id="redtext"><em>Design and Crime And Other Diatribes</em></a></span>.</footer>
-				<footer>Citation: Foster, Hal. 2000. <em>Design And Crime And Other Diatribes</em>. Verso Books.</footer>
-		</section>
+			</section>		
 	</body>
 </html>
