Changed body color for direction1

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
 		<div class="flex-container">
 			<div class="links">
 			<a href="#designandcrime"><button>Design & Crime</button></a>
-			<a href="#snoopy"><button>Snoopy</button></a>
-			<a href="#quality"><button>Quality</button></a>
-			<a href="#sample"><button>Sample</button></a>
-			<a href="#lovin"><button>Lovin</button></a>
+			<a href="#gestalt"><button>G-E-S-T-A-L-T</button></a>
+			<a href="#c1962"><button>C-1962</button></a>
 			</div>
 			<a href="#start" id="arrow">&#8593;</a>
 	</div>
