--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <html>
 	<head>
-	<header>War on Deco</header>
 	<!--Below is a meta element that tells the browser to render it at its actual size-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Below is a reset, it clears off browser's default style -->
@@ -10,6 +9,7 @@
 	<!-- Below are fonts -->
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Arizonia&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 		</style>
 	<!-- Below is a link to my CSS file -->
 	<link href="assets/common.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 	</head>
 	<body>
 		<header>
-			<h1><span id="war">War</span><span id="on">On</span><span id="deco">Deco</span></h1>
+			<h1><span id="war">War</span><br><span id="on">On </span><span id="deco">Deco</span></h1>
 			<h2 class="author">Bulgan Bee, 2024></h2>
 		</header> 
 		<div class="flex-container">
