--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<body>
 		<header>
 			<h1><span id="war">War</span><br><span id="on">On </span><span id="deco">Deco</span></h1>
-			<h2 class="author">Bulgan Bee, 2024></h2>
+			<h2 class="author">Bulgan Bee, 2024</h2>
 		</header> 
 		<div class="flex-container">
 			<div class="links">
