added border and padding css to navigation bar
direction1

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 			<a href="#gestalt"><button>G-E-S-T-A-L-T</button></a>
 			<a href="#c1962"><button>C-1962</button></a>
 			</div>
-			<a href="#start" id="arrow">&#8593;</a>
 	</div>
 	<!-- Below is my introduction to the theme of the articles -->
+	 <article>
 			<section>
 				<p>The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or <span id="redtext">Art Nouveau</span> has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line — as if to inhabit the thing in this crafted way was to resist the advance of industrial reification somehow.</p> 
 				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer <em>nouveau</em>, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was its strong echo in the present — intuition that we live in another era of blurred disciplines, of objects treated as mini-subjects, of total design, of a <em>Style 2000</em>.</span> </p>  
@@ -48,6 +48,7 @@
 				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. The others, the positive ones [i.e., those who fail to make this distinction], are divided into those who use the urn as a chamber pot and those who use the chamber pot as an urn.</p> 
 				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object (the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, <em>Fountain</em>, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things: they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture. </p>
 				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p>
-			</section>		
+			</section>	
+		</article>	
 	</body>
 </html>
