added footer to css
direction1

--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
 				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p>
 			</section>	
 		</article>	
+		<footer>
+			<h1 class="footer">Intro and web by</h1>
+			<h2 class="authorfooter">Bulgan Bee</h2>
+		</footer>
 	</body>
 </html>
