added div for table of contents

--- a/index.html
+++ b/index.html
@@ -20,14 +20,22 @@
 	<!--<link href="assets/direction1.css" rel="stylesheet">-->
 	<link href="assets/direction2.css" rel="stylesheet">
 	<!--<link href="assets/direction3.css" rel="stylesheet"> -->
-
 	</head>
 	<body>
 		<header>
 			<h1><span id="war">War</span><br><span id="on">On </span><span id="deco">Deco</span></h1>
 			<h2 class="author">Bulgan Bee, 2024</h2>
 		</header> 
-		<div class="flex-container">
+		<div class="dropdown">
+		<button class="drop">Table of contents</button>
+		<div class="contents">
+			<a href="#designandcrime"><button>Introduction</button></a>
+			<a href="#designandcrime"><button>Design & Crime</button></a>
+			<a href="#gestalt"><button>G-E-S-T-A-L-T</button></a>
+			<a href="#c1962"><button>C-1962</button></a>
+		</div>
+		</div>
+		<!--<div class="flex-container">
 			<div class="links">
 			<a href="#designandcrime"><button>Design & Crime</button></a>
 			<a href="#gestalt"><button>G-E-S-T-A-L-T</button></a>
