--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		</style>
 	<!-- Below is a link to my CSS file -->
 	<link href="assets/common.css" rel="stylesheet">
-	<!--<link href="assets/direction1.css" rel="stylesheet">-->
-	<link href="assets/direction2.css" rel="stylesheet">
+	<link href="assets/direction1.css" rel="stylesheet">
+	<!--<link href="assets/direction2.css" rel="stylesheet">
 	<!--<link href="assets/direction3.css" rel="stylesheet"> -->
 	</head>
 	<body>
@@ -26,16 +26,16 @@
 			<h1><span id="war">War</span><br><span id="on">On </span><span id="deco">Deco</span></h1>
 			<h2 class="author">Bulgan Bee, 2024</h2>
 		</header> 
-		<div class="dropdown">
+		<!--<div class="dropdown">
 		<button class="drop">Table of contents</button>
 		<div class="contents">
 			<a href="#designandcrime"><button>Introduction</button></a>
 			<a href="#designandcrime"><button>Design & Crime</button></a>
 			<a href="#gestalt"><button>G-E-S-T-A-L-T</button></a>
 			<a href="#c1962"><button>C-1962</button></a>
+		</div> -->
 		</div>
-		</div>
-		<!--<div class="flex-container">
+		<div class="flex-container">
 			<div class="links">
 			<a href="#designandcrime"><button>Design & Crime</button></a>
 			<a href="#gestalt"><button>G-E-S-T-A-L-T</button></a>
