Changed font family for header, line height, and color

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	</head>
 	<body>
 		<header>
-			<h1>From Decorative to <span id="complete">Invisible</span></h1>
-			<h1 class="secondhead">Designers intro to ditching the traditions</h1>
+			<h1>From Decorative to <span id="complete"><mark>Invisible</mark></span></h1>
+			<h1 class="secondhead">History of Design Function</h1>
 			<h2 class="author">Bulgan Bee, 2024</h2>
 		</header> 
 		<!--<div class="dropdown">
