Added a links to the articles below the header

--- a/index.html
+++ b/index.html
@@ -28,26 +28,47 @@
 	</head>
 	<body>
 		<header>
-			<h1>From Decorative to <span id="complete"><mark>Invisible</mark></span></h1>
-			<h1 class="secondhead">History of Design Function</h1>
-			<h2 class="author">Bulgan Bee, 2024</h2>
+			<h1>From <span id="deco">Decorative</span> to <span id="invisible"><mark>Invisible</mark></span></h1>
+			
 		</header> 
+		<!--<div class="dropdown">
+			<ul>
+				<li><a href="#">Table of Contents</a></li>
+				<ul class="links">
+					<li><a href="#">Introduction</a></li>
+					<li><a href="#">Design and Crime</a></li>
+					<li><a href="#">Graphic Design’s Factory Settings</a></li>
+					<li><a href="#">The Concept Of The Design Discipline</a></li>
+				</ul>
+			</ul>
+			</div>-->
 		<!--<div class="dropdown">
 		<button class="drop">Table of contents</button>
 		<div class="contents">
-			<a href="#designandcrime"><button>Introduction</button></a>
-			<a href="#designandcrime"><button>Design & Crime</button></a>
-			<a href="#gestalt"><button>G-E-S-T-A-L-T</button></a>
-			<a href="#c1962"><button>C-1962</button></a>
-		</div> -->
-		</div>
-		<div class="flex-container">
+			<ol>
+			<li><a href="#designandcrime"><button>Introduction</button></a></li>
+			<li><a href="#designandcrime"><button>Design & Crime</button></a></li>
+			<li><a href="#gestalt"><button>G-E-S-T-A-L-T</button></a></li>
+			<li><a href="#c1962"><button>C-1962</button></a></li>
+		</ol>
+		</div> 
+		</div>-->
+		<!--<div class="flex-container">
 			<div class="links">
 			<a href="#designandcrime"><button>Design & Crime</button></a>
 			<a href="#gestalt"><button>G-E-S-T-A-L-T</button></a>
 			<a href="#c1962"><button>C-1962</button></a>
 			</div>
-	</div>
+	</div>>-->
+	<div class="flex-container">
+		<a href="#designandcrime"><button>Design & Crime: And Other Diatribes&nbsp;&nbsp;&nbsp;&nbsp;&#8594;</button></a>
+</div>
+<div class="flex-container">
+	<a href="#designandcrime"><button>Graphic Design’s Factory Settings &nbsp;&nbsp;&nbsp;&nbsp;&#8594;</button></a>
+</div>
+<div class="flex-container">
+	<a href="#designandcrime"><button>The Concept Of The Design Discipline &nbsp;&nbsp;&nbsp;&nbsp;&#8594;</button></a>
+</div>
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
 			<section>
