Added design changes to the sections about the readings

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 				<h3>Introduction</h3>
 				<p>Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
 			</section>	
-		</article>	
+			<h3>Articles</h3>	
+		</article>
+	
 		<div class="flex-container">
 			<a href="#designandcrime"><button>Design & Crime: And Other Diatribes&nbsp;&nbsp;&nbsp;&nbsp;&#8594;</button></a>
 	</div>
@@ -76,6 +78,23 @@
 	<div class="flex-container">
 		<a href="#designandcrime"><button>The Concept Of The Design Discipline &nbsp;&nbsp;&nbsp;&nbsp;&#8594;</button></a>
 	</div>
+	<article>
+		<section class="articlesection">
+			<h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
+			<h4>Hal Foster, 2000</h4>
+			<p class="articleintro">This reading explores the critique of Adolf Loos, who was an anti-Art Noveau </p>
+		</section>
+		<section class="articlesection">
+			<h3 class="articlename">Graphic Design's Factory Settings</h3>
+			<h4>Jacob Lindgren, 2020</h4>
+			<p class="articleintro">This reading explores the critique of Adolf Loos, who was an anti-Art Noveau </p>
+		</section>
+		<section class="articlesection">
+			<h3 class="articlename">The Concept Of The Design Discipline</h3>
+			<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
+			<p class="articleintro">This reading explores the critique of Adolf Loos, who was an anti-Art Noveau </p>
+		</section>
+	</article>
 		<footer>
 			<h1 class="footer">Intro and web by</h1>
 			<h2 class="authorfooter">Bulgan Bee</h2>
