--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 			<p class="articleintro">The author criticizes how graphic design is shaped by mass production, and schools teach students how to serve consumerist needs rather than challenging the capitalist system.</p>
 		</section>
 		<section class="articlesection">
-			<h3 class="articlename">The <span id="red">Concept</span> Of The Design Discipline</h3>
+			<h3 class="articlename">The <span id="red">Concept</span> Of<br>The Design Discipline</h3>
 			<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 			<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 		</section>
 	</article>
 		<footer>
-			<h1 class="footer">Intro and web by</h1>
+			<h1 class="footer"><mark>Intro and web by</mark></h1>
 			<h2 class="authorfooter">Bulgan Bee</h2>
 		</footer>
 	</body>
