direction 2 header and nav bar added

--- a/index.html
+++ b/index.html
@@ -18,19 +18,24 @@
 		@import url('https://fonts.googleapis.com/css2?family=Arizonia&family=DM+Serif+Text:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Limelight&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 		@import url('https://fonts.googleapis.com/css2?family=Arizonia&family=DM+Serif+Text:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Limelight&family=Manrope:wght@200..800&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 		@import url('https://fonts.googleapis.com/css2?family=Federo&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Amarante&family=Arizonia&family=DM+Serif+Text:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Limelight&family=Manrope:wght@200..800&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Rubik+Doodle+Shadow&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Amarante&family=Arizonia&family=DM+Serif+Text:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Limelight&family=Londrina+Shadow&family=Manrope:wght@200..800&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Rubik+Doodle+Shadow&display=swap');
+
+
 
 		</style>
 	<!-- Below is a link to my CSS file -->
 	<link href="assets/common.css" rel="stylesheet">
-	<link href="assets/direction1.css" rel="stylesheet">
-	<!--<link href="assets/direction2.css" rel="stylesheet">
-	<!--<link href="assets/direction3.css" rel="stylesheet"> -->
+	<!--<link href="assets/direction1.css" rel="stylesheet">-->
+	<link href="assets/direction2.css" rel="stylesheet">
+	<!--<link href="assets/direction3.css" rel="stylesheet">-->
 	</head>
 	<body>
 		<header>
-			<h1>From <span id="deco">Decorative</span> to <span id="invisible"><mark>Invisible</mark></span></h1>
+			<h1><span id="deco">Decorative</span> To <span id="invisible"><mark>Invisible</mark></span></h1>
 			
 		</header> 
+		<!-- Dropdown table ofcontents -->
 		<!--<div class="dropdown">
 			<ul>
 				<li><a href="#">Table of Contents</a></li>
@@ -53,11 +58,13 @@
 		</ol>
 		</div> 
 		</div>-->
-		<!--<div class="flex-container">
+
+			<!-- Articles link for direction2 -->
+		<div class="flex-container">
 			<div class="links">
 			<a href="#designandcrime"><button>Design & Crime</button></a>
-			<a href="#gestalt"><button>G-E-S-T-A-L-T</button></a>
-			<a href="#c1962"><button>C-1962</button></a>
+			<a href="#gestalt"><button>Factory</button></a>
+			<a href="#c1962"><button>Concept</button></a>
 			</div>
 	</div>>-->
 	<!-- Below is my introduction to the theme of the articles -->
@@ -66,7 +73,8 @@
 				<h3>Introduction</h3>
 				<p>Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
 			</section>	
-			<h3>Articles</h3>	
+				<!-- Articles link for direction1 -->
+			<!--<h3>Articles</h3>	
 		</article>
 	
 		<div class="flex-container">
@@ -77,7 +85,7 @@
 	</div>
 	<div class="flex-container">
 		<a href="#designandcrime"><button>The Concept Of The Design Discipline &nbsp;&nbsp;&nbsp;&nbsp;&#8594;</button></a>
-	</div>
+	</div> -->
 	<article>
 		<section class="articlesection">
 			<h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
