edited background colors, borders for the articles section

--- a/index.html
+++ b/index.html
@@ -66,12 +66,28 @@
 			<a href="#gestalt"><button>Factory</button></a>
 			<a href="#c1962"><button>Concept</button></a>
 			</div>
-	</div>>-->
+	</div>
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
 			<section>
-				<h3>Introduction</h3>
+				<h3><span id="circle">&#9680;</span> Introduction</h3>
 				<p>Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
+				<!-- Section for direction2 -->
+				<section class="articlesection">
+					<h3 class="articlename"><span id="circle">&#9680;</span> Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
+					<h4>Hal Foster, 2000</h4>
+					<p class="articleintro">The book Design and Crime and Other Diatribes raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
+				</section>
+				<section class="articlesection">
+					<h3 class="articlename"><span id="circle">&#9680;</span> Graphic Design's <span id="red">Factory</span> Settings</h3>
+					<h4>Jacob Lindgren, 2020</h4>
+					<p class="articleintro">The author criticizes how graphic design is shaped by mass production, and schools teach students how to serve consumerist needs rather than challenging the capitalist system.</p>
+				</section>
+				<section class="articlesection">
+					<h3 class="articlename"><span id="circle">&#9680;</span> The <span id="red">Concept</span> Of<br>The Design Discipline</h3>
+					<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
+					<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
+				</section>
 			</section>	
 				<!-- Articles link for direction1 -->
 			<!--<h3>Articles</h3>	
@@ -85,7 +101,7 @@
 	</div>
 	<div class="flex-container">
 		<a href="#designandcrime"><button>The Concept Of The Design Discipline &nbsp;&nbsp;&nbsp;&nbsp;&#8594;</button></a>
-	</div> -->
+	</div> 
 	<article>
 		<section class="articlesection">
 			<h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
@@ -102,7 +118,7 @@
 			<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 			<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 		</section>
-	</article>
+	</article>-->
 		<footer>
 			<h1 class="footer"><mark>Intro and web by</mark></h1>
 			<h1 class="authorfooter">Bulgan Bee</h1>
