--- a/index.html
+++ b/index.html
@@ -74,17 +74,25 @@
 				<p>Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
 				<!-- Section for direction2 -->
 				<section class="articlesection">
-					<h3 class="articlename"><span id="circle">&#9680;</span> Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
+					<div class="articlelink"><h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
+						<a href="#" id="arrow2">&rarr;</a>
+					</div>
 					<h4>Hal Foster, 2000</h4>
 					<p class="articleintro">The book Design and Crime and Other Diatribes raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
 				</section>
 				<section class="articlesection">
-					<h3 class="articlename"><span id="circle">&#9680;</span> Graphic Design's <span id="red">Factory</span> Settings</h3>
+					<div class="articlelink">
+						<h3 class="articlename">Graphic Design's <span id="red">Factory</span> Settings</h3>
+						<a href="#" id="arrow2">&rarr;</a>
+					</div>
 					<h4>Jacob Lindgren, 2020</h4>
 					<p class="articleintro">The author criticizes how graphic design is shaped by mass production, and schools teach students how to serve consumerist needs rather than challenging the capitalist system.</p>
 				</section>
 				<section class="articlesection">
-					<h3 class="articlename"><span id="circle">&#9680;</span> The <span id="red">Concept</span> Of<br>The Design Discipline</h3>
+					<div class="articlelink">
+						<h3 class="articlename">The <span id="red">Concept</span> Of<br>The Design Discipline</h3>
+						<a href="#" id="arrow2">&rarr;</a>
+					</div>
 					<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 					<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 				</section>
