Header for direction3

--- a/index.html
+++ b/index.html
@@ -21,20 +21,29 @@
 		@import url('https://fonts.googleapis.com/css2?family=Amarante&family=Arizonia&family=DM+Serif+Text:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Limelight&family=Manrope:wght@200..800&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Rubik+Doodle+Shadow&display=swap');
 		@import url('https://fonts.googleapis.com/css2?family=Amarante&family=Arizonia&family=DM+Serif+Text:ital@0;1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Limelight&family=Londrina+Shadow&family=Manrope:wght@200..800&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Rubik+Doodle+Shadow&display=swap');
 
-
-
 		</style>
 	<!-- Below is a link to my CSS file -->
 	<link href="assets/common.css" rel="stylesheet">
 	<!--<link href="assets/direction1.css" rel="stylesheet">-->
-	<link href="assets/direction2.css" rel="stylesheet">
-	<!--<link href="assets/direction3.css" rel="stylesheet">-->
+	<!--<link href="assets/direction2.css" rel="stylesheet">-->
+		<link href="assets/direction3.css" rel="stylesheet">
 	</head>
 	<body>
-		<header>
+		<!--<header>
 			<h1><span id="deco">Decorative</span> To <span id="invisible"><mark>Invisible</mark></span></h1>
-			
+		</header> -->
+	<!-- Header for direction3 -->
+		<header>
+			<h1><span id="deco"><mark>Decorative</mark></span> to<br> <span id="invisible"><span id="in">In-</span><br>visible</span></h1>
+			<h2>Bulgan Bee | 2024</h2>
 		</header> 
+		<!-- Table of contents for direction3 -->
+	<div class="flex-container">
+		<div class="links">
+		<a href="#"><button>Table of Contents</button></a>
+		<a href="#"><button><span id="plus">&#43;</button></a>
+		</div>
+</div>
 		<!-- Dropdown table ofcontents -->
 		<!--<div class="dropdown">
 			<ul>
@@ -60,20 +69,20 @@
 		</div>-->
 
 			<!-- Articles link for direction2 -->
-		<div class="flex-container">
+		<!--<div class="flex-container">
 			<div class="links">
 			<a href="#designandcrime"><button>Design & Crime</button></a>
 			<a href="#gestalt"><button>Factory</button></a>
 			<a href="#c1962"><button>Concept</button></a>
-			</div>
-	</div>
+			</div> 
+	</div>-->
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
 			<section>
 				<h3><span id="circle">&#9680;</span> Introduction</h3>
 				<p>Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
 				<!-- Section for direction2 -->
-				<section class="articlesection">
+				<!--<section class="articlesection">
 					<div class="articlelink"><h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
 						<a href="#" id="arrow2">&rarr;</a>
 					</div>
@@ -96,7 +105,7 @@
 					<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 					<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 				</section>
-			</section>	
+			</section>-->	
 				<!-- Articles link for direction1 -->
 			<!--<h3>Articles</h3>	
 		</article>
