Added a reading list section fixed intro

--- a/index.html
+++ b/index.html
@@ -79,8 +79,18 @@
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
 			<section>
-				<h3><span id="circle">&#9680;</span> Introduction</h3>
-				<p>Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
+				<h3 class="introh3"><!--<span id="circle">&#9680;</span>--> Introduction</h3>
+				<p class="intropa">Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
+				<!-- Section for direction3 -->
+				 <section class="aboutarticles">
+				 <h3 class="start">Start reading</h3>
+				 <h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
+				 <h4>Hal Foster, 2000</h4>
+					<p class="articleintro">The book Design and Crime and Other Diatribes raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
+					<h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
+					<h4>Hal Foster, 2000</h4>
+					   <p class="articleintro">The book Design and Crime and Other Diatribes raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
+				</section>
 				<!-- Section for direction2 -->
 				<!--<section class="articlesection">
 					<div class="articlelink"><h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
