Added the articles section

--- a/index.html
+++ b/index.html
@@ -87,9 +87,12 @@
 				 <h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
 				 <h4>Hal Foster, 2000</h4>
 					<p class="articleintro">The book Design and Crime and Other Diatribes raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
-					<h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
-					<h4>Hal Foster, 2000</h4>
-					   <p class="articleintro">The book Design and Crime and Other Diatribes raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
+					<h3 class="articlename">Graphic Design’s Factory Settings</h3>
+					<h4>Jacob Lindgren, 2020</h4>
+					   <p class="articleintro">The author criticizes how graphic design is shaped by mass production, and schools teach students how to serve consumerist needs rather than challenging the capitalist system.</p>
+					   <h3 class="articlename">The <span id="red">Concept</span> Of The Design Discipline</h3>
+					   <h4>Paul A. Rodgers, Craig Bremner 2017</h4>
+						  <p class="articleintro">he reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 				</section>
 				<!-- Section for direction2 -->
 				<!--<section class="articlesection">
