added footer to direction3

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
 		</section>
 	</article>-->
 		<footer>
-			<h1 class="footer"><mark>Intro and web by</mark></h1>
+			<!--<h1 class="footer"><mark>Intro and web by</mark></h1>-->
+			<h1 class="footer">Intro and web by</h1>
 			<h1 class="authorfooter">Bulgan Bee</h1>
 		</footer>
 	</body>
