Fixed footer for direction3

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 					   <h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 						  <p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 				</section>
+				</section> 
+			</article>
 				<!-- Section for direction2 -->
 				<!--<section class="articlesection">
 					<div class="articlelink"><h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
