--- a/index.html
+++ b/index.html
@@ -24,51 +24,28 @@
 		</style>
 	<!-- Below is a link to my CSS file -->
 	<link href="assets/common.css" rel="stylesheet">
-	<!--<link href="assets/direction1.css" rel="stylesheet">-->
+	<link href="assets/direction1.css" rel="stylesheet">
 	<!--<link href="assets/direction2.css" rel="stylesheet">-->
-		<link href="assets/direction3.css" rel="stylesheet">
+	<!--<link href="assets/direction3.css" rel="stylesheet">-->
 	</head>
 	<body>
-		<!--<header>
-			<h1><span id="deco">Decorative</span> To <span id="invisible"><mark>Invisible</mark></span></h1>
-		</header> -->
-	<!-- Header for direction3 -->
+<!-- Header for direction1 and direction2 -->
 		<header>
+			<h1><span id="deco">Decorative</span> To <span id="invisible"><mark>Invisible</mark></span></h1>
+		</header>
+<!-- Header for direction3 -->
+		<!--<header>
 			<h1><span id="deco"><mark>Decorative</mark></span> to<br> <span id="invisible"><span id="in">In-</span><br>visible</span></h1>
 			<h2>Bulgan Bee | 2024</h2>
-		</header> 
-		<!-- Table of contents for direction3 -->
-	<div class="flex-container">
+		</header>-->
+<!-- Table of contents for direction3 -->
+	<!--<div class="flex-container">
 		<div class="links">
 		<a href="#"><button>Table of Contents</button></a>
 		<a href="#"><button><span id="plus">&#43;</button></a>
 		</div>
-</div>
-		<!-- Dropdown table ofcontents -->
-		<!--<div class="dropdown">
-			<ul>
-				<li><a href="#">Table of Contents</a></li>
-				<ul class="links">
-					<li><a href="#">Introduction</a></li>
-					<li><a href="#">Design and Crime</a></li>
-					<li><a href="#">Graphic Design’s Factory Settings</a></li>
-					<li><a href="#">The Concept Of The Design Discipline</a></li>
-				</ul>
-			</ul>
-			</div>-->
-		<!--<div class="dropdown">
-		<button class="drop">Table of contents</button>
-		<div class="contents">
-			<ol>
-			<li><a href="#designandcrime"><button>Introduction</button></a></li>
-			<li><a href="#designandcrime"><button>Design & Crime</button></a></li>
-			<li><a href="#gestalt"><button>G-E-S-T-A-L-T</button></a></li>
-			<li><a href="#c1962"><button>C-1962</button></a></li>
-		</ol>
-		</div> 
 		</div>-->
-
-			<!-- Articles link for direction2 -->
+<!-- Articles link for direction2 -->
 		<!--<div class="flex-container">
 			<div class="links">
 			<a href="#designandcrime"><button>Design & Crime</button></a>
@@ -81,8 +58,8 @@
 			<section>
 				<h3 class="introh3"><!--<span id="circle">&#9680;</span>--> Introduction</h3>
 				<p class="intropa">Since the early 20th century, design has shifted from being viewed as a decorative luxury for the wealthy to becoming an accessible, everyday functional commodity due to mass production. In this collection of readings, I have selected three articles that explore the critique of the Art Nouveau-style approach to design, how mass production has simplified design, and how design has evolved to become invisible in our everyday lives.</p>
-				<!-- Section for direction3 -->
-				 <section class="aboutarticles">
+<!-- Section for direction3 -->
+				<!-- <section class="aboutarticles">
 				 <h3 class="start">Start reading</h3>
 				 <h3 class="articlename"><u>Design & <span id="red">Crime</span><br>& Other Diatribes</u></h3>
 				 <h4>Hal Foster, 2000</h4>
@@ -94,9 +71,9 @@
 					   <h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 						  <p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 				</section>
-				</section> 
+				</section> -->
 			</article>
-				<!-- Section for direction2 -->
+	<!-- Section for direction2 -->
 				<!--<section class="articlesection">
 					<div class="articlelink"><h3 class="articlename">Design & <span id="red">Crime</span><br>& Other Diatribes</h3>
 						<a href="#" id="arrow2">&rarr;</a>
@@ -120,9 +97,9 @@
 					<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 					<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 				</section>
-			</section>-->	
-				<!-- Articles link for direction1 -->
-			<!--<h3>Articles</h3>	
+			</section>-->
+	<!-- Articles link for direction1 -->
+			<h3 class="articlesmain">Articles</h3>	
 		</article>
 	
 		<div class="flex-container">
@@ -150,10 +127,10 @@
 			<h4>Paul A. Rodgers, Craig Bremner 2017</h4>
 			<p class="articleintro">The reading examines the manifesto of modern design disciplines and how it changed over time. The author discusses how design has become less visible in today's world, emphasizing a quote that states, “Objects are unobservable. Only relationships between objects are observable.” This suggests that design is now more focused on the connections and interactions between humans and objects than the objects themselves.</p>
 		</section>
-	</article>-->
+	</article>
 		<footer>
-			<!--<h1 class="footer"><mark>Intro and web by</mark></h1>-->
-			<h1 class="footer">Intro and web by</h1>
+			<h1 class="footer"><mark>Intro and web by</mark></h1>
+			<!--<h1 class="footer">Intro and web by</h1>-->
 			<h1 class="authorfooter">Bulgan Bee</h1>
 		</footer>
 	</body>
